lang/src/ast/snapshots/rain_lang__ast__expr__test__fn_call_no_args.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"foo()\")"
---
Expr(
 FnCall(
  Expr(
   Ident(
    foo
   )
  )
  FnCallArgs(
  )
 )
)
