lang/src/ast/snapshots/rain_lang__ast__expr__test__fn_call_no_args_precedence.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"foo.bar()\")"
---
FnCall(
 BinaryOp(
  Ident(foo)
  Dot(.)
  Ident(bar)
 )
 FnCallArgs(
 )
)
