lang/src/ast/snapshots/rain_lang__ast__expr__test__fn_call_one_arg.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"foo(1)\")"
---
Expr(
 FnCall(
  Expr(
   Ident(
    foo
   )
  )
  FnCallArgs(
   Expr(
    IntegerLiteral(
     1
    )
   )
  )
 )
)
