lang/src/ast/snapshots/rain_lang__ast__expr__test__fn_call_two_arg_trailing_comma.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"foo(1, 2,)\")"
---
FnCall(
 Ident(foo)
 FnCallArgs(
  Number(1)
  Number(2)
 )
)
