lang/src/ast/snapshots/rain_lang__ast__expr__test__ident_dot_ident_dot_ident.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"foo.bar.baz\")"
---
BinaryOp(
 BinaryOp(
  Ident(foo)
  Dot(.)
  Ident(bar)
 )
 Dot(.)
 Ident(baz)
)
