lang/src/ast/snapshots/rain_lang__ast__expr__test__ident_dot_maths.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"a.b.c + 3 * d.e\")"
---
BinaryOp(
 BinaryOp(
  BinaryOp(
   Ident(a)
   Dot(.)
   Ident(b)
  )
  Dot(.)
  Ident(c)
 )
 Addition(+)
 BinaryOp(
  Number(3)
  Multiplication(*)
  BinaryOp(
   Ident(d)
   Dot(.)
   Ident(e)
  )
 )
)
