lang/src/ast/snapshots/rain_lang__ast__expr__test__ident_maths.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"a + b - c * d / e\")"
---
BinaryOp(
 BinaryOp(
  Ident(a)
  Addition(+)
  Ident(b)
 )
 Subtraction(-)
 BinaryOp(
  BinaryOp(
   Ident(c)
   Multiplication(*)
   Ident(d)
  )
  Division(/)
  Ident(e)
 )
)
