lang/src/ast/snapshots/rain_lang__ast__expr__test__logical_operators.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"true || a == b && 1 != 1 && (false || a != b)\")"
---
BinaryOp(
 True(true)
 LogicalOr(||)
 BinaryOp(
  BinaryOp(
   BinaryOp(
    Ident(a)
    Equals(==)
    Ident(b)
   )
   LogicalAnd(&&)
   BinaryOp(
    Number(1)
    NotEquals(!=)
    Number(1)
   )
  )
  LogicalAnd(&&)
  BinaryOp(
   False(false)
   LogicalOr(||)
   BinaryOp(
    Ident(a)
    NotEquals(!=)
    Ident(b)
   )
  )
 )
)
