lang/src/ast/snapshots/rain_lang__ast__expr__test__maths_parens-2.snap
---
source: lang/src/ast/expr.rs
expression: "parse_display_expr(\"(3 - b) * c\")"
---
BinaryOp(
 BinaryOp(
  Number(3)
  Subtract(-)
  Ident(b)
 )
 Star(*)
 Ident(c)
)
